[gd_scene load_steps=17 format=2]

[ext_resource path="res://fontlar/youngserif-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resimler/giris_kutu_scroll.webp" type="Texture" id=2]
[ext_resource path="res://resimler/giris_buton_basili.webp" type="Texture" id=3]
[ext_resource path="res://resimler/checkbox.webp" type="Texture" id=4]
[ext_resource path="res://resimler/checkbox_tikli.webp" type="Texture" id=5]
[ext_resource path="res://resimler/google_logo.webp" type="Texture" id=6]
[ext_resource path="res://resimler/facebook_logo.webp" type="Texture" id=7]
[ext_resource path="res://resimler/giris_buton_normal.webp" type="Texture" id=8]
[ext_resource path="res://sceneler/LoginKutusu.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0.964706, 0.745098, 0.368627, 1 )
use_filter = true
extra_spacing_bottom = 6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="LoginKutusu" type="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -324.5
margin_right = 290.0
margin_bottom = 324.5
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
script = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.5
margin_top = -257.0
margin_right = 217.5
margin_bottom = 257.0
custom_constants/separation = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaslikMerkezleyici" type="CenterContainer" parent="VBoxContainer"]
margin_right = 435.0
margin_bottom = 67.0

[node name="Baslik" type="Label" parent="VBoxContainer/BaslikMerkezleyici"]
margin_left = 55.0
margin_right = 380.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Log into GaD"

[node name="EmailText" type="Label" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 435.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
text = "Email:      "
align = 1

[node name="Email" type="LineEdit" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 435.0
margin_bottom = 175.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
placeholder_text = "example@mail.com"
caret_blink = true

[node name="SifreText" type="Label" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 435.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 2 )
text = "Password:"
align = 1

[node name="Sifre" type="LineEdit" parent="VBoxContainer"]
margin_top = 237.0
margin_right = 435.0
margin_bottom = 283.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
secret = true
placeholder_text = "*********"
caret_blink = true

[node name="MerkezleyiciButonlar" type="CenterContainer" parent="VBoxContainer"]
margin_top = 296.0
margin_right = 435.0
margin_bottom = 357.0

[node name="DikeyBolucuButonlar" type="HBoxContainer" parent="VBoxContainer/MerkezleyiciButonlar"]
margin_left = 7.0
margin_right = 427.0
margin_bottom = 61.0
custom_constants/separation = 20

[node name="Giris" type="TextureButton" parent="VBoxContainer/MerkezleyiciButonlar/DikeyBolucuButonlar"]
margin_right = 200.0
margin_bottom = 61.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 3 )

[node name="Login" type="Label" parent="VBoxContainer/MerkezleyiciButonlar/DikeyBolucuButonlar/Giris"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -30.5
margin_right = 100.0
margin_bottom = 30.5
custom_fonts/font = SubResource( 5 )
text = "Login"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uyelik" type="TextureButton" parent="VBoxContainer/MerkezleyiciButonlar/DikeyBolucuButonlar"]
margin_left = 220.0
margin_right = 420.0
margin_bottom = 61.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 3 )

[node name="Signup" type="Label" parent="VBoxContainer/MerkezleyiciButonlar/DikeyBolucuButonlar/Uyelik"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -30.5
margin_right = 100.0
margin_bottom = 30.5
custom_fonts/font = SubResource( 5 )
text = "Sign Up"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remember" type="CenterContainer" parent="VBoxContainer"]
margin_top = 370.0
margin_right = 435.0
margin_bottom = 414.0

[node name="RememberCheckBox" type="CheckBox" parent="VBoxContainer/Remember"]
margin_left = 85.0
margin_right = 349.0
margin_bottom = 44.0
focus_mode = 0
custom_constants/hseparation = -6
custom_fonts/font = SubResource( 6 )
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked = ExtResource( 4 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = " Remember me"
align = 1

[node name="DikeyBolucuLogolar" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 427.0
margin_right = 435.0
margin_bottom = 514.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Facebook" type="TextureButton" parent="VBoxContainer/DikeyBolucuLogolar"]
visible = false
margin_right = 60.0
margin_bottom = 87.0
texture_normal = ExtResource( 7 )

[node name="Google" type="TextureButton" parent="VBoxContainer/DikeyBolucuLogolar"]
visible = false
margin_right = 60.0
margin_bottom = 87.0
texture_normal = ExtResource( 6 )

[node name="BilgiYazisi" type="Label" parent="VBoxContainer/DikeyBolucuLogolar"]
margin_top = 31.0
margin_right = 435.0
margin_bottom = 55.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
align = 1

[connection signal="pressed" from="VBoxContainer/MerkezleyiciButonlar/DikeyBolucuButonlar/Giris" to="." method="_on_Giris_pressed"]
[connection signal="pressed" from="VBoxContainer/MerkezleyiciButonlar/DikeyBolucuButonlar/Uyelik" to="." method="_on_Uyelik_pressed"]
